--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-@import url("../node_modules/font-awesome/css/font-awesome.min.css");
-@font-face {
-    font-family: "Font Awesome 6 Free";
-    src: url("../node_modules/font-awesome/css/font-awesome.min.css");
-}
 
 #root{
     display: flex;
@@ -10,11 +5,12 @@
     align-items: center;
     font-family: roboto;
     background-color: rgb(235, 235, 235);
-    height: 100%;
+    min-height: 100vh;
 }
 
 body{
     background-color: rgb(235, 235, 235);
+    min-height: 100vh;
 }
 
 *{
@@ -130,7 +126,8 @@ a{
     background-color: rgb(199, 199, 199);
 }
 
-.shoppingCartContainer{
+.shoppingCartContainer,
+.homePage{
     margin-top: 7rem;
     display: flex;
     flex-direction: column;
@@ -243,4 +240,114 @@ a{
 
 .productsPageContainer{
     margin-top: 7rem;
+}
+
+.paymentSection{
+    color: rgb(61, 61, 61);
+    position: fixed;
+    right:0;
+    background-color: white;
+    width: 20%;
+    height: max-content;
+    box-shadow: 1px 1px 5px 4px rgb(182, 182, 182);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+    box-sizing: border-box;
+    gap: 2rem;
+}
+
+hr{
+    width: 100%;
+}
+
+.orderTotalContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    gap:2px;
+}
+
+.toPaymentButton{
+    width: 100%;
+    height: 2rem;
+    background-color: rgb(61, 61, 61);
+    color: white;
+    font-weight: 900;
+}
+
+.summaryTitleContainer{
+    width: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+}
+
+.summaryMidSec{
+    display: flex;
+    width: 100%;
+}
+
+.allPricesDiv{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap:2px;
+}
+
+.sumTotalPrice{
+    font-weight: bold;
+    margin-top: 4px;
+    ;
+}
+
+.sumTotalItems,
+.sumPrice,
+.sumTax{
+    font-weight: 300;
+}
+
+.aboutUsContainer{
+    display: flex;
+    flex-direction: column;
+    width: 45rem;
+    align-items: center;
+}
+
+.homePageTitle{
+    color: rgb(65, 65, 65);
+}
+
+.homePage{
+    gap: 3rem;
+}
+
+.aboutUsHeader{
+    color: rgb(241 114 41);
+}
+
+.aboutUs{
+    font-weight: 400;
+    color: #808080;
+
+
+}
+
+.footer{
+    background-color:  rgb(65, 65, 65);
+    width: 100%;
+    margin-top: auto;
+    height: 2.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-weight: 900;
+    font-family: "righteous";
+    color: #c0c0c0;
+    letter-spacing: .5px;
+
 }
