--- a/src/index.css
+++ b/src/index.css
@@ -151,7 +151,7 @@ a{
     justify-content: center;
     font-size: .8rem;
     font-weight: bold;
-    border: .5px solid #baaaaa;
+    border: .5px solid rgb(241 114 41);
     box-sizing: border-box;
     padding: .6rem;
     color: white;
